# Python-DI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/python_di/: application.py
src/python_di/example/: entry_point.py  example_app.py
src/python_di/example/services/: service_a.py  service_b.py
src/python_di_application/: application.py  di_container.py
src/python_di_application/example/: entry_point.py  example_app.py
src/python_di_application/example/services/: config_b.py  service_a.py  service_b.py
tests/: test_dependency_container.py
