[project]
name = "python-di"
version = "0.1.0"
description = "Lightweight dependency injection container for Python with automatic constructor wiring and configuration overrides."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "ruff>=0.15.4",
]


[tool.uv]
package = true
